spdlog/tests/compile_fail/pattern_runtime_disabled.rs
use spdlog::formatter::runtime_pattern;

fn runtime_pattern() {
    runtime_pattern!("{logger}");
}

fn main() {}
